- create entity for short info about image - made work version of app without local BD, saving image etc. - added activity for review image info - refactoring and etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Галерея кисок</string>
     <string name="tab_text_1">Киски</string>
     <string name="tab_text_2">Избранное</string>
+    <string name="cant_download_pussies">Не удалось загрузить кисок</string>
+    <string name="retry">Повторить</string>
+    <string name="cant_load_items">Не грузит =(</string>
 </resources>
