- finish functional part of activity for reviewing image     * it show pussy image     * it can download image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="tab_text_1">Киски</string>
     <string name="tab_text_2">Избранное</string>
     <string name="cant_download_pussies">Не удалось загрузить кисок</string>
+    <string name="cant_download_details">Не удалось загрузить информацию</string>
     <string name="retry">Повторить</string>
     <string name="cant_load_items">Не грузит =(</string>
+    <string name="pussy_info">Информация о киске</string>
 </resources>
