- fixed bug with duplicating items after each fragment start - corrected design - added "Empty layout" in favorite fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="retry">Повторить</string>
     <string name="cant_load_items">Не грузит =(</string>
     <string name="pussy_info">Информация о киске</string>
+    <string name="pussy_list_is_empty">Нет избранных кисок</string>
 </resources>
